Add setGoalAsDone function and ajax postCheckedGoals in order to check goals done

--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,12 @@ body {
 .GoalList > li:not(:last-child){
   margin-bottom: 1rem;
 }
+
+/*input[type=checkbox] + label {
+  color: #ccc;
+  font-style: italic;
+}
+input[type=checkbox]:checked + label {
+  color:#0066ff;
+  font-style: normal;
+}*/
