Add Bar chart to each GoalItem,add changes to DoughnutChart colors, create Chain component and BarChart component

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ body {
   margin-bottom: 1rem;
 }
 
+/*.GoalBarChart {
+  transform: rotate(90deg);
+}*/
+
 /*input[type=checkbox] + label {
   color: #ccc;
   font-style: italic;
