--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 body {
   margin: 2 rem;
   padding: 0;
-  font-family: Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 100;
 }
 .GoalItem {
@@ -29,11 +29,15 @@ body {
 }
 
 .GoalList > li {
-  padding: 1rem;
+  padding: 0;
 }
 
 .GoalList > li:not(:last-child){
-  margin-bottom: 1rem;
+  margin-bottom: 0;
+}
+
+.GoalDoughnutChart {
+  margin-top: 7rem;
 }
 
 /*.GoalBarChart {
