--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
 }
+h2 {
+  text-align: center;
+}
 .GoalItem {
   padding: 2 rem;
   background-color: white;
@@ -37,7 +40,7 @@ body {
 }
 
 .GoalDoughnutChart {
-  margin-top: 7rem;
+  margin-top: 5rem;
 }
 
 
