--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,36 @@
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+}
+
+.App-header {
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
+  color: white;
+}
+
+.App-intro {
+  font-size: large;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
 
 body {
-  margin: 2 rem;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+
+body {
   padding: 0;
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
@@ -9,14 +39,16 @@ h2 {
   text-align: center;
 }
 .GoalItem {
-  padding: 2 rem;
+  padding: 2rem;
   background-color: white;
   display: flex;
   flex-flow: row;
 }
+
 .GoalItem > div {
   margin-bottom: 1rem;
 }
+
 .GoalItem > div > li {
   color: White;
   padding: 0.1rem 0.5rem;
@@ -43,16 +75,18 @@ h2 {
   margin-top: 5rem;
 }
 
-
-/*.GoalBarChart {
-  transform: rotate(90deg);
-}*/
-
-/*input[type=checkbox] + label {
-  color: #ccc;
-  font-style: italic;
+@media (max-width: 500px) {
+.icon-btn {
+  font-size:2px !important;
+  padding:2px !important;
 }
-input[type=checkbox]:checked + label {
-  color:#0066ff;
-  font-style: normal;
-}*/
+}
+
+.fab {
+    margin: 0px;
+    bottom: auto;
+    left: 260px;
+    top: 80px;
+    right: auto;
+    position: fixed;
+};
